# EcoChain-24

./: AGENTS.md  DEMO_SCRIPT.txt  Makefile  README.md  REAL_TIME_AGENT_EXECUTION.md  REAL_TIME_WORK_DEMO.md  SUBMISSION_WRITEUP.md  agent_builder_playbook.md  copilot-instructions.md  ecochain.db  pyproject.toml  run_demo.py  user_request.txt
.github/: ADK_SETUP.md  tools.md
.github/agents/: anomaly.agent.md  audit.agent.md  calculation.agent.md  compliance.agent.md  ingestion.agent.md  orchestrator.agent.md  recommendation.agent.md  report.agent.md
.github/hooks/: ecochain-auth.json  ecochain-error.json  ecochain-logging.json
.github/prompts/: analyze-supplier.prompt.md  carbon-reduction-strategy.prompt.md  investigate-anomaly.prompt.md  run-emissions-audit.prompt.md  verify-compliance.prompt.md
dashboard/: dashboard.js  index.css  index.html
ecochain/: __init__.py  __main__.py  cli.py  db.py  mcp.py  server.py
ecochain/.adk/: session.db
ecochain/agents/: __init__.py  alert.py  anomaly.py  audit.py  base.py  calculate.py  comply.py  ingest.py  log.py  orchestrator.py  (+2 more)
reports/: board_summary_2024-Q1_20260627.html  board_summary_2024-Q1_20260628.html  board_summary_2024-Q1_20260630.html  board_summary_2024-Q1_20260701.html  ghg_inventory_2024-Q1_20260627.html  ghg_inventory_2024-Q1_20260628.html  ghg_inventory_2024-Q1_20260630.html  ghg_inventory_2024-Q1_20260701.html  supplier_scorecard_2024-Q1_20260627.html  supplier_scorecard_2024-Q1_20260628.html  supplier_scorecard_2024-Q1_20260630.html  supplier_scorecard_2024-Q1_20260701.html
tests/: test_system.py
